# Autonomous-Trading-Simulation

./: .env.example  .gitignore  README.md  accounts.db  accounts.py  accounts_client.py  accounts_server.py  app.py  main.py  market.py  market_server.py  mcp_params.py  pyproject.toml  traders.py  trading_floor.py
config/: templates.py
mcp_clients/: accounts_client.py
mcp_servers/: accounts_server.py  push_server.py
memory/: Warren.db
models/: accounts.py
scripts/: reset.py
services/: database.py  market.py  tracers.py
trading_agents/: traders.py
